@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
 # locationX:int
 # locationY:int
 # speedX:int
 # speedY:int
 # image:BufferedImage
 # width:int
 # height:int
 # isValid:boolean
 + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
 + forward():void
 + crash(AbstractFlyingObject flyingObject):boolean
 + setLocation(double locationX, double locationY):void
 + getLocationX():int
 + getLocationY():int
 + getSpeedX():int
 + getSpeedY():int
 + getImage():BufferedImage
 + getWidth():int
 + getHeight():int
 + notValid():boolean
 + vanish():void
}
abstract class AbstractAircraft
{
 # maxHp:int
  # hp:int
  # shootnum:int
  # power:int
  -shootMethod:ShootMethod
  + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp,shootnum,power)
  + decreaseHp(int decrease):void
  + getHp():int
  + getShootnum():int
  + setShootnum(int x):void
  + getPower():int
  + {abstract} shoot():List<BaseBullet>
  + setShootMethod(ShootMethod shootMethod):void
  + executeShoot():List<BaseBullet>
}
abstract class AbstractEnemy
{
+ Enemy(int locationX, int locationY, int speedX, int speedY, int hp)
+ {abstract} dropProp():PropObject
# outOfBound:boolean
+ isOutOfBound():boolean
}
class MobEnemy
{
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp,int shootnum,int power)
    + forward():void
    + dropProp():PropObject
    + shoot():List<BaseBullet>
}
class EliteEnemy
{
 - direction:int
 + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp,int shootnum,int power)
 + forward():void
 + dropProp():PropObject
 + shoot():List<BaseBullet>
}
class BossEnemy
{
 - direction:int
 + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp,int shootnum,int power)
 + dropProp():PropObject
 + forward():void
 + shoot():List<BaseBullet>
}
interface EnemyFactory
{
   +{abstract}Creator():Enemy
}
class BossEnemyFactory
{
    + Creator():Enemy
}
class EliteEnemyFactory
{
    +Creator():Enemy
}
class MobEnemyFactory
{
    +Creator():Enemy
}
AbstractFlyingObject<|--AbstractAircraft
AbstractAircraft<|--AbstractEnemy
AbstractEnemy<|--MobEnemy
AbstractEnemy<|--EliteEnemy
AbstractEnemy<|--BossEnemy
MobEnemyFactory..|>EnemyFactory
EliteEnemyFactory..|>EnemyFactory
BossEnemyFactory..|>EnemyFactory
MobEnemy..>MobEnemyFactory
EliteEnemy..>EliteEnemyFactory
BossEnemy..>BossEnemyFactory

@enduml